src/app/_components/Header.module.css
.wrap {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 99;
  width: 100%;
  background-color: var(--bg-body);
  height: var(--header-h);
  transition: height 200ms;
}

@media screen and (max-width: 480px) {
  .mobile {
    display: none;
  }
}

@media screen and (max-width: 960px) {
  .header {
    padding: 0 20px;
  }
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 0 !important;
  width: calc(var(--post-w) + 32px);
  height: 100%;
  margin: auto;

  & a,
  svg {
    color: var(--text-2);
    transition: color 125ms ease-in-out;
    cursor: pointer;
    &:hover {
      color: var(--text-1);
    }
  }
}

@media screen and (max-width: 960px) {
  .header {
    width: 100%;
  }
}

.shadow {
  box-shadow: var(--shadow-header);
  height: calc((var(--header-h) - 32px));
}

.hide {
  height: 0;
  box-shadow: none;
}

.header svg {
  display: block;
  font-size: 24px;
}

.item:hover {
  color: var(--text);
}

.left {
  font-weight: 700;
  font-style: italic;
}

.right {
  display: flex;
  gap: 24px;
  align-items: center;
}

@media screen and (max-width: 780px) {
  .right {
    gap: 16px;
  }
}

.select {
  border: none;
  appearance: none;
  font-size: 18px;
  outline: none;
  background-color: var(--bg-body);
  color: var(--text-2);
  cursor: pointer;
  width: 24px;

  &:hover {
    color: var(--text-1);
  }

  & > option {
    font-size: 16px;
  }
}

